--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start:dev:win": "SET \"NODE_ENV=development\" SET DEBUG=myapp:* && nodemon ./bin/www",
+    "start:dev": "NODE_ENV=development DEBUG=cs667ms2:* nodemon ./bin/www",
+    "start:dev:win": "SET \"NODE_ENV=development\" SET DEBUG=cs667ms2:* && nodemon ./bin/www",
     "db:create:migration": "npx sequelize migration:generate --name ",
     "db:migrate": "npx sequelize db:migrate",
-    "db:rollback": "npx sequelize db:migrate:undo"
+    "db:rollback": "npx sequelize db:migrate:undo",
+    "postinstall": "npx sequelize db:migrate"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
