10/12/22 Changed name of app to fit term project. Ready to transfer git repositories (wjplachno)

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://wjpla:2012Guitar@localhost:5432/cs667ms2
+DATABASE_URL=postgres://wjpla:2012Guitar@localhost:5432/csc667teama
