--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "cs667ms2",
+  "name": "csc667teama",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start:dev": "NODE_ENV=development DEBUG=cs667ms2:* nodemon ./bin/www",
-    "start:dev:win": "SET \"NODE_ENV=development\" SET DEBUG=cs667ms2:* && nodemon ./bin/www",
+    "start:dev": "NODE_ENV=development DEBUG=csc667teama:* nodemon ./bin/www",
+    "start:dev:win": "SET \"NODE_ENV=development\" SET DEBUG=csc667teama:* && nodemon ./bin/www",
     "db:create:migration": "npx sequelize migration:generate --name ",
     "db:migrate": "npx sequelize db:migrate",
     "db:rollback": "npx sequelize db:migrate:undo",
